[package]
name = "monie"
version = "0.1.0"
authors = ["Noah Levitt <nlevitt@archive.org>", "Austin Heller"]
edition = "2018"

[dependencies]
hyper = "0.14.20"
hyper-rustls = "0.23.0"
http = "0.2.8"
lazy_static = "1.2"
rustls = "0.20.6"
lru-cache = "0.1"
tokio = "1.21.2"
tokio-rustls = "0.23.4"
bytes = "1.2.1"
futures = "0.3.24"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4.0"

[[example]]
name = "noop"
path = "examples/noop.rs"